atualização do trabalho (trabalho 2)

--- a/pages/templates/pages/home.html
+++ b/pages/templates/pages/home.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Site Django</title>
-</head>
-<body>
-    <h1>Meu primeiro site feito com Django</h1>
+{% extends "pages/base.html" %}
+
+{% block title %}Senac Site > Home{% endblock %}
+
+{% block content %}
+    <h2>Página Inicial</h2>
     <p>{{ mensagem }}</p>
-</body>
-</html>
+{% endblock %}
